--- a/TestStandaloneApp/TestStandaloneApp.csproj
+++ b/TestStandaloneApp/TestStandaloneApp.csproj
@@ -4,12 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5BCF4BDB-9F30-4C69-8DB4-07C191533B6D}</ProjectGuid>
+    <ProjectGuid>{AD5608C4-65A2-4B1A-A901-47D7E979D0FB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TestClientApp</RootNamespace>
-    <AssemblyName>TestClientApp</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>TestStandaloneApp</RootNamespace>
+    <AssemblyName>TestStandaloneApp</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -40,6 +41,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -81,10 +83,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WkwkReportClient\WkwkReportClient.csproj">
-      <Project>{4580b168-7b0a-4877-88f0-2604cf9331ee}</Project>
-      <Name>WkwkReportClient</Name>
-    </ProjectReference>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\WkwkReportServer\WkwkReportServer.csproj">
       <Project>{cbd55003-6c31-4aba-848d-52b7f2ef176e}</Project>
       <Name>WkwkReportServer</Name>
