--- a/WkwkReportDeveloper/WkwkReportDeveloper.csproj
+++ b/WkwkReportDeveloper/WkwkReportDeveloper.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AD5608C4-65A2-4B1A-A901-47D7E979D0FB}</ProjectGuid>
+    <ProjectGuid>{AA76AA2B-20DA-4102-BF09-1F0391931C2E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TestStandaloneApp</RootNamespace>
-    <AssemblyName>TestStandaloneApp</AssemblyName>
+    <RootNamespace>WkwkReportDeveloper</RootNamespace>
+    <AssemblyName>WkwkReportDeveloper</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <CefSharpAnyCpuSupport>true</CefSharpAnyCpuSupport>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -86,11 +87,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="script\DataXmlSample.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\WkwkReportClient\WkwkReportClient.csproj">
       <Project>{4580b168-7b0a-4877-88f0-2604cf9331ee}</Project>
       <Name>WkwkReportClient</Name>
@@ -103,6 +99,19 @@
       <Project>{18bb33d2-4a17-4e00-8f5b-8d652c5b85f1}</Project>
       <Name>WkwkReportStandalone</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CefSharp.WinForms">
+      <Version>86.0.241</Version>
+    </PackageReference>
+    <PackageReference Include="RazorEngine">
+      <Version>3.10.0</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="script\DataXmlSample.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
